Edited To Do List Description

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<h2><a href="#">To Do List Database </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>A database to be used for a simple to do list application</p>
+									<p>A database to be used for a simple To Do List Application</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
