Added Lisp Language Image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Kent Howell GitHub Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -86,7 +86,7 @@
 									<header>
 										<h2><a href="#">Lisp-ish Parser</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/LispLanguage.png" alt="" /></a>
 									<p>A parser to handle a very basic form of LISP</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
