--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<header>
 										<h2><a href="#">Directions Webpage</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/MapLogo.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/MapLogo.png" alt="" /></a>
 									<p>A webpage to display directions using the MapQuest API that was originally hosted on an EC2 AWS Server.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
