--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 										<h2><a href="#">Sorting Algorithms Paper</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>A scientific paper including descriptions, time complexity analysis, and implementation of various sorting algorithms.</p>
+									<p>A scientific paper including descriptions, time complexity analysis, and implementation of various sorting algorithms written in LaTex.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
