--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Kent Howell</h1>
-						<p>This is a showcase of my projects and abilities as a programmer. Feel free to explore and email me if you have any questions.</p>
+						<p>Listed below are examples of my abilities as a programmer through works completed at Miami University.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
