--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<header>
 										<h2><a href="#">To Do List Database </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="ToDoListERD.png" alt="" /></a>
 									<p>A database to be used for a simple To Do List Application</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
