--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Scribe Accounting Website</a></h2>
-									<p>Scribe is a webpage based in PHP and Javascript to faciliate after-the-fact bookeeping. <br> As a capstone project, it has a full
-										seperate repository and wiki that I encourage you to explore.
-									</p>
+									<p>Scribe is a webpage based in PHP and Javascript to faciliate after-the-fact bookeeping.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="https://github.com/khowellmobile/SimpleToDoListDatabase" class="button large">Repository</a></li>
 								</ul>
 							</article>
 
@@ -69,7 +67,7 @@
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>A 2D game develpoed in Unity that includes animation, collision detection, enemy behavior control, and use of imported assets</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -79,7 +77,7 @@
 									<a href="#" class="image fit"><img src="ToDoListERD.png" alt="" /></a>
 									<p>A database to be used for a simple To Do List Application</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/khowellmobile/SimpleToDoListDatabase" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -89,7 +87,7 @@
 									<a href="#" class="image fit"><img src="images/LispLogo.png" alt="" /></a>
 									<p>A parser to handle a very basic form of LISP</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -99,7 +97,7 @@
 									<a href="#" class="image fit"><img src="images/MapLogo.png" alt="" /></a>
 									<p>A webpage to display directions using the MapQuest API that was originally hosted on an EC2 AWS Server.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -109,7 +107,7 @@
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>Solutions to Breath-First Traversal, Depth-First Traversal, Topological Sort, and Dijkstra's Shortest Path Graph Algorithms</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -119,73 +117,23 @@
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>A scientific paper including descriptions, time complexity analysis, and implementation of various sorting algorithms written in LaTex.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Repository</a></li>
 									</ul>
 								</article>
 							</section>
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
 						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(614) 849-8953</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								<p><a href="#">khowellmobile@gmail.com</a></p>
 							</section>
 						</section>
 					</footer>
