added picture for scribe

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 									<h2><a href="#">Scribe Accounting Website</a></h2>
 									<p>Scribe is a webpage based in PHP and Javascript to faciliate after-the-fact bookeeping.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/scribe-logo.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/khowellmobile/SimpleToDoListDatabase" class="button large">Repository</a></li>
+									<li><a href="https://github.com/khowellmobile/SeniorCapstone" class="button large">Repository</a></li>
 								</ul>
 							</article>
 
