fixed image link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<header>
 										<h2><a href="#">To Do List Database </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="ToDoListERD.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/ToDoListERD.png" alt="" /></a>
 									<p>A database to be used for a simple To Do List Application</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/khowellmobile/SimpleToDoListDatabase" class="button">Repository</a></li>
