Updated images and links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2><a href="#">Scribe Accounting Website</a></h2>
 									<p>Scribe is a webpage based in PHP and Javascript to faciliate after-the-fact bookeeping.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/scribe-logo.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/scribe-logo.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/khowellmobile/SeniorCapstone" class="button large">Repository</a></li>
 								</ul>
@@ -65,7 +65,7 @@
 										<h2><a href="#">2D Video Game</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>A 2D game develpoed in Unity that includes animation, collision detection, enemy behavior control, and use of imported assets</p>
+									<p>A 2D game developed in Unity that includes animation, collision detection, enemy behavior control, and use of imported assets</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Repository</a></li>
 									</ul>
@@ -87,7 +87,7 @@
 									<a href="#" class="image fit"><img src="images/LispLogo.png" alt="" /></a>
 									<p>A parser to handle a very basic form of LISP</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Repository</a></li>
+										<li><a href="https://github.com/khowellmobile/LispParser" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -97,27 +97,27 @@
 									<a href="#" class="image fit"><img src="images/MapLogo.png" alt="" /></a>
 									<p>A webpage to display directions using the MapQuest API that was originally hosted on an EC2 AWS Server.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Repository</a></li>
+										<li><a href="https://github.com/khowellmobile/DirectionsWebpage" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2><a href="#">Graph Algorithms</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/graphAlgos.png" alt="" /></a>
 									<p>Solutions to Breath-First Traversal, Depth-First Traversal, Topological Sort, and Dijkstra's Shortest Path Graph Algorithms</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Repository</a></li>
+										<li><a href="https://github.com/khowellmobile/GraphAlgorithms" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2><a href="#">Sorting Algorithms Paper</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/sortingAlgos.png" alt="" /></a>
 									<p>A scientific paper including descriptions, time complexity analysis, and implementation of various sorting algorithms written in LaTex.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Repository</a></li>
+										<li><a href="https://www.overleaf.com/read/vfptfdkwcths" class="button">Repository</a></li>
 									</ul>
 								</article>
 							</section>
