addeed 2dgame image and adjust scribe logo size

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2><a href="#">Scribe Accounting Website</a></h2>
 									<p>Scribe is a webpage based in PHP and Javascript to faciliate after-the-fact bookeeping.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/scribe-logo.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/scribe-logo.png" width="10" height="650" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/khowellmobile/SeniorCapstone" class="button large">Repository</a></li>
 								</ul>
@@ -64,7 +64,7 @@
 									<header>
 										<h2><a href="#">2D Video Game</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/homescreen.png" alt="" /></a>
 									<p>A 2D game developed in Unity that includes animation, collision detection, enemy behavior control, and use of imported assets</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Repository</a></li>
