--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
 								<h3>Email</h3>
 								<p><a href="#">khowellmobile@gmail.com</a></p>
 							</section>
+							<section>
+								<h3>LinkedIn</h3>
+								<p><a href="#">https://www.linkedin.com/in/kent-howell-0ab895239/</a></p>
+							</section>
+							<section>
+								<h3>GitHub</h3>
+								<p><a href="#">https://github.com/khowellmobile</a></p>
+							</section>
 						</section>
 					</footer>
 
