Added links to titles and pictures

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Scribe Accounting Website</a></h2>
+									<h2><a href="https://github.com/khowellmobile/SeniorCapstone">Scribe Accounting Website</a></h2>
 									<p>Scribe is a webpage based in PHP and Javascript to faciliate after-the-fact bookeeping.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/scribe-logo.png" width="10" height="650" alt="" /></a>
+								<a href="https://github.com/khowellmobile/SeniorCapstone" class="image main"><img src="images/scribe-logo.png" width="10" height="650" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/khowellmobile/SeniorCapstone" class="button large">Repository</a></li>
 								</ul>
@@ -62,19 +62,19 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">2D Video Game</a></h2>
+										<h2><a href="https://github.com/khowellmobile/2DGame">2D Video Game</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/homescreen.png" alt="" /></a>
+									<a href="https://github.com/khowellmobile/2DGame" class="image fit"><img src="images/homescreen.png" alt="" /></a>
 									<p>A 2D game developed in Unity that includes animation, collision detection, enemy behavior control, and use of imported assets</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Repository</a></li>
+										<li><a href="https://github.com/khowellmobile/2DGame" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">To Do List Database </a></h2>
+										<h2><a href="https://github.com/khowellmobile/SimpleToDoListDatabase">To Do List Database </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/ToDoListERD.png" alt="" /></a>
+									<a href="https://github.com/khowellmobile/SimpleToDoListDatabase" class="image fit"><img src="images/ToDoListERD.png" alt="" /></a>
 									<p>A database to be used for a simple To Do List Application</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/khowellmobile/SimpleToDoListDatabase" class="button">Repository</a></li>
@@ -82,9 +82,9 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Lisp-ish Parser</a></h2>
+										<h2><a href="https://github.com/khowellmobile/LispParser">Lisp-ish Parser</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/LispLogo.png" alt="" /></a>
+									<a href="https://github.com/khowellmobile/LispParser" class="image fit"><img src="images/LispLogo.png" alt="" /></a>
 									<p>A parser to handle a very basic form of LISP</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/khowellmobile/LispParser" class="button">Repository</a></li>
@@ -92,9 +92,9 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Directions Webpage</a></h2>
+										<h2><a href="https://github.com/khowellmobile/DirectionsWebpage">Directions Webpage</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/MapLogo.png" alt="" /></a>
+									<a href="https://github.com/khowellmobile/DirectionsWebpage" class="image fit"><img src="images/MapLogo.png" alt="" /></a>
 									<p>A webpage to display directions using the MapQuest API that was originally hosted on an EC2 AWS Server.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/khowellmobile/DirectionsWebpage" class="button">Repository</a></li>
@@ -102,9 +102,9 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Graph Algorithms</a></h2>
+										<h2><a href="https://github.com/khowellmobile/GraphAlgorithms">Graph Algorithms</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/graphAlgos.png" alt="" /></a>
+									<a href="https://github.com/khowellmobile/GraphAlgorithms" class="image fit"><img src="images/graphAlgos.png" alt="" /></a>
 									<p>Solutions to Breath-First Traversal, Depth-First Traversal, Topological Sort, and Dijkstra's Shortest Path Graph Algorithms</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/khowellmobile/GraphAlgorithms" class="button">Repository</a></li>
@@ -112,9 +112,9 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Sorting Algorithms Paper</a></h2>
+										<h2><a href="https://www.overleaf.com/read/vfptfdkwcths">Sorting Algorithms Paper</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/sortingAlgos.png" alt="" /></a>
+									<a href="https://www.overleaf.com/read/vfptfdkwcths" class="image fit"><img src="images/sortingAlgos.png" alt="" /></a>
 									<p>A scientific paper including descriptions, time complexity analysis, and implementation of various sorting algorithms written in LaTex.</p>
 									<ul class="actions special">
 										<li><a href="https://www.overleaf.com/read/vfptfdkwcths" class="button">Repository</a></li>
