Cleaning uneeded tempalte files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/custom.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -20,7 +21,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Kent Howell</h1>
-						<p>Listed below are examples of my abilities as a programmer through works completed at Miami University</p>
+						<p>Listed below are examples of my abilities as a programmer</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
