Updated site to include current works in progress

--- a/index.html
+++ b/index.html
@@ -46,6 +46,27 @@
 
 				<!-- Main -->
 					<div id="main">
+						<article>
+							<header class="major">
+								<h2>Projects in progress</h2>
+							</header>
+							<div class="split">
+								<div class="left centerFlex">
+									<header>
+										<h2><a href="https://github.com/khowellmobile/practice-cs-tool">Practice CS Tool</a></h2>
+									</header>
+									<a href="https://github.com/khowellmobile/practice-cs-tool" class="image fit"><img src="images/cs.png" alt="" /></a>
+									<p>The Practice CS Tool efficiently generates custom reports from a local server-hosted Practice CS database, simplifying data extraction and analysis to provide tailored insights and analytics.</p>
+								</div>
+								<div class="right centerFlex">
+									<header>
+										<h2><a href="https://github.com/khowellmobile/farmwebsite-react-django">Farm Website</a></h2>
+									</header>
+									<a href="https://github.com/khowellmobile/farmwebsite-react-django" class="image fit"><img src="images/cow.png" alt="" /></a>
+									<p>A website built using React.js and Django. Its purpose is attract clients to the farm through displaying services offered, listing cattle, and communicating the farms story and goals. </p>
+								</div>
+							</div>
+					</article>
 
 						<!-- Featured Post -->
 							<article class="post featured">
@@ -58,7 +79,7 @@
 									<li><a href="https://github.com/khowellmobile/SeniorCapstone" class="button large">Repository</a></li>
 								</ul>
 							</article>
-
+						</section>
 						<!-- Posts -->
 							<section class="posts">
 								<article>
